--- a/template.html
+++ b/template.html
@@ -74,7 +74,7 @@
           </div>
       </div>
     </section>
-    <footer class="container">
+    <footer class="container has-text-centered is-italic">
       Last generated {{ today }}
     </footer>
   <script type="text/javascript">
