Add visitor counter

--- a/template.html
+++ b/template.html
@@ -125,5 +125,6 @@ if ($navbarBurgers.length > 0) {
 
 });
   </script>
+  <img src="https://stats.xwcl.science/matomo.php?idsite=1&amp;rec=1" style="border:0" alt="" />
   </body>
 </html>
